Fixes horizontal scroll issue on mobile devices

--- a/packages/client/src/shared/themes/styles.scss
+++ b/packages/client/src/shared/themes/styles.scss
@@ -12,6 +12,3 @@ body {
   font-family: 'Lato', sans-serif;
   background: #FAFAFC;
 }
-html, body {
-  height: 100%;
-}
